add update tests and some classes
